--- a/.github/workflows/check-format.yml
+++ b/.github/workflows/check-format.yml
@@ -10,9 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.4.6
       - name: Check format
-        run: terraform fmt -check -recursive
+        run: terraform fmt -recursive
+      - name: Push formatted code
+        run: git push
