ec2にeipを追加+リファクタ

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .idea/*
 
 **/.terraform/*
-terraform.tfstate
-terraform.tfstate.backup
-.terraform.tfstate.lock.info
-*.tfvars
+**terraform.tfstate
+**terraform.tfstate.backup
+**.terraform.tfstate.lock.info
+**.tfvars
 
-id_rsa
+**/key_pair/*
+!**/key_pair/*.pub
